<resources>
    <string name="app_name">BLE button</string>
    <string name="title_activity_top">BLE button</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_device">BLE device</string>
    <string name="pref_device_address">Device Address</string>
    <string name="pref_scan_devices">Scan BLE devices</string>

    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Notifications on BLE button pressed</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="menu_settings">Settings</string>
</resources>
